--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=cbc33522db7d4829554f2cd073d672c3
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://postgres:admin@127.0.0.1:5432/polizas?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://postgres:admin123@127.0.0.1:5432/polizas?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
